--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,5 +10,10 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create-drop
+#      ddl-auto: update
     show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
+        format_sql: true
 
