--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>state-tax-calculator</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>state-tax-calculator</name>
-	<description>State tax calculator project for Spring Boot</description>
+	<description>Income Tax Calculator project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -31,9 +31,12 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
