--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/state_tax_calc?createDatabaseIfNotExist=true
+    url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/tax_calculator?createDatabaseIfNotExist=true
     username: root
     password: test1234
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -16,4 +16,8 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
         format_sql: true
+#  security:
+#    user:
+#      name: admin
+#      password: admin
 
