Added loading of data in federal and state tax brackets tables. Improved the design. Show the details of error in case not enough data in tables.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,12 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
         format_sql: true
+    defer-datasource-initialization: true
+  sql:
+    init:
+      mode: always
+      data-locations: "classpath:data-mysql.sql"
+
 #  security:
 #    user:
 #      name: admin
